# Pyboca

./: README.md  pyproject.toml  tutorial.ipynb
datasets/: example.csv
pyboca/: __init__.py  __main__.py
