[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyboca"
authors = [{name = "yvictor", email = "yvictor3141@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "requests",
    "pyquery",
    "fire",
]

[project.urls]
Home = "https://github.com/Yvictor/Pyboca"

[project.scripts]
boca = "pyboca.__main__:main"